--- a/app/src/main/res/layout/order_row_relative.xml
+++ b/app/src/main/res/layout/order_row_relative.xml
@@ -26,7 +26,7 @@
 
     <TextView
         android:id="@+id/idNumber"
-        android:layout_width="30dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/orderId"
         android:layout_alignParentStart="true"
@@ -45,7 +45,7 @@
         android:layout_width="790dp"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="56dp"
 
         android:layout_marginTop="4dp"
         android:layout_marginEnd="48dp"
@@ -67,7 +67,7 @@
         android:layout_below="@+id/foodName"
         android:layout_alignParentBottom="true"
 
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="56dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="48dp"
 
