--- a/app/src/main/res/layout/vendor_list_cancel_popup.xml
+++ b/app/src/main/res/layout/vendor_list_cancel_popup.xml
@@ -96,7 +96,8 @@
         android:layout_centerHorizontal="true"
         android:background="@drawable/outline_rect"
         android:cursorVisible="false"
-        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_-*‘“#&amp;()@"
+        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 _-*‘“#&amp;()@"
+        android:editable="false"
         android:focusable="auto"
         android:focusableInTouchMode="true"
         android:gravity="start" />
@@ -111,7 +112,7 @@
         android:layout_marginTop="0dp"
         android:fontFamily="@font/sfprotext_semibold"
         android:text="error"
-        android:textColor="@color/redPrimary"
+        android:textColor="@color/lightgrey"
         android:textSize="14sp"
         android:visibility="invisible" />
 
@@ -126,8 +127,8 @@
 
         <Button
             android:id="@+id/dismissButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
             android:background="@android:color/transparent"
             android:fontFamily="@font/sfprotext_semibold"
@@ -137,12 +138,12 @@
 
         <Button
             android:id="@+id/confirmButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="130dp"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="10dp"
-            android:background="@drawable/pink_rect"
-            android:clickable="false"
+            android:background="@drawable/button_grey_rounded"
             android:elevation="1dp"
+            android:enabled="true"
             android:fontFamily="@font/sfprotext_semibold"
             android:paddingHorizontal="30dp"
             android:text="CONFIRM"
