--- a/app/src/main/res/layout/vendor_list_cancel_popup.xml
+++ b/app/src/main/res/layout/vendor_list_cancel_popup.xml
@@ -10,7 +10,7 @@
         android:layout_height="20dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="5dp"
         android:background="@drawable/ic_close"
         android:padding="3dp" />
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/sfprotext_bold"
         android:text="Cancel Order"
         android:textColor="#333333"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:fontFamily="@font/sfprotext_regular"
         android:text="Do you wish to cancel the order"
         android:textColor="#333333"
@@ -97,10 +97,12 @@
         android:background="@drawable/outline_rect"
         android:cursorVisible="false"
         android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 _-*‘“#&amp;()@"
-        android:editable="false"
         android:focusable="auto"
         android:focusableInTouchMode="true"
-        android:gravity="start" />
+        android:gravity="start"
+        android:hint="Only a-z A-Z 0-9 _ - * ‘ “ # &amp; () @ are allowed."
+        android:textColorHint="#D6D8D8"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/error"
@@ -111,8 +113,7 @@
         android:layout_alignRight="@id/reasonBox"
         android:layout_marginTop="0dp"
         android:fontFamily="@font/sfprotext_semibold"
-        android:text="error"
-        android:textColor="@color/lightgrey"
+        android:textColor="@color/redPrimary"
         android:textSize="14sp"
         android:visibility="invisible" />
 
@@ -122,7 +123,7 @@
         android:layout_below="@id/error"
         android:layout_centerHorizontal="true"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal">
 
         <Button
