--- a/app/src/main/res/layout/activity_vendor_review.xml
+++ b/app/src/main/res/layout/activity_vendor_review.xml
@@ -167,7 +167,8 @@
             android:textColor="@color/pinkPrimary"
             android:textSize="24sp"
             android:layout_toEndOf="@id/overallReview"
-            android:layout_marginStart="24dp"/>
+            android:layout_marginStart="24dp"
+            android:maxLength="4"/>
         <TextView
             android:id="@+id/scoreStar"
             android:layout_width="wrap_content"
