--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -8,6 +8,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MenuActivity"
+    android:clipToPadding="false"
     >
 
     <LinearLayout
@@ -117,7 +118,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="85dp"
-        android:background="#FAFAFA">
+        android:background="#FAFAFA"
+        android:clipToPadding="false"
+        >
 
 
         <Button
@@ -131,7 +134,9 @@
             android:background="@drawable/button_white_rounded"
             android:fontFamily="@font/sfprotext_bold"
             android:textColor="@color/pinkPrimary"
-            android:textSize="16sp"/>
+            android:textSize="16sp"
+            android:visibility="invisible"
+            />
 
         <Button
             android:id="@+id/closeMenuButton"
@@ -149,32 +154,40 @@
     </RelativeLayout>
 
     <View
-        android:id="@+id/divider2"
+        android:id="@+id/sectionDivider"
         android:layout_width="match_parent"
         android:layout_height="2dp"
-        android:background="?android:attr/listDivider" />
+        android:background="?android:attr/listDivider"
+        android:visibility="invisible"/>
 
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:clipChildren="false"
+        android:clipToPadding="false"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="24dp">
+            android:padding="24dp"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            >
 
             <TextView
                 android:id="@+id/combinationLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="8dp"
                 android:layout_alignParentTop="true"
+                android:layout_marginTop="24dp"
                 android:text="Combination"
                 android:textAppearance="@style/menuTypeHeadline"
-                />
+                android:layout_alignStart="@+id/combinationMenuRecyclerView"
+                android:layout_marginStart="24dp"
+                android:visibility="gone"/>
 
             <android.support.v7.widget.RecyclerView
                 android:layout_width="wrap_content"
@@ -182,32 +195,34 @@
                 android:layout_below="@+id/combinationLabel"
                 android:layout_marginTop="32dp"
                 android:layout_centerHorizontal="true"
-                android:id="@+id/combinationMenuRecyclerView">
+                android:id="@+id/combinationMenuRecyclerView"
+                android:visibility="gone">
 
             </android.support.v7.widget.RecyclerView>
 
             <View
-                android:id="@+id/divider3"
+                android:id="@+id/menuDivider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_below="@+id/combinationMenuRecyclerView"
-
                 android:layout_alignParentBottom="false"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="0dp"
-                android:background="?android:attr/listDivider" />
+                android:background="?android:attr/listDivider"
+                android:visibility="gone"/>
 
 
             <TextView
                 android:id="@+id/alarcarteLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-
-                android:layout_below="@+id/divider3"
-                android:layout_marginStart="8dp"
+                android:layout_below="@+id/menuDivider"
                 android:layout_marginTop="48dp"
                 android:text="A La Carte"
-                android:textAppearance="@style/menuTypeHeadline" />
+                android:textAppearance="@style/menuTypeHeadline"
+                android:layout_alignStart="@id/alacarteMenuRecyclerView"
+                android:layout_marginStart="24dp"
+                android:visibility="gone"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/alacarteMenuRecyclerView"
@@ -215,19 +230,36 @@
                 android:layout_height="match_parent"
                 android:layout_below="@+id/alarcarteLabel"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="32dp">
+                android:layout_marginTop="32dp"
+                android:visibility="gone">
 
             </android.support.v7.widget.RecyclerView>
 
-            <View
-                android:id="@+id/divider4"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@+id/alacarteMenuRecyclerView"
-                android:layout_alignParentBottom="true"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="0dp"
-                android:background="?android:attr/listDivider" />
+            <Button
+                android:id="@+id/createNewButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/vectorImage"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="64dp"
+                android:background="@drawable/button_pink_fill_rounded"
+                android:fontFamily="@font/sfprotext_bold"
+                android:paddingHorizontal="56dp"
+                android:paddingVertical="20dp"
+                android:text="create your first menu"
+                android:textColor="#FFF"
+                android:textSize="20sp"
+                android:visibility="gone"
+                />
+
+            <ImageView
+                android:id="@+id/vectorImage"
+                android:layout_width="363dp"
+                android:layout_height="223dp"
+                android:layout_centerHorizontal="true"
+                app:srcCompat="@drawable/ic_undraw_hamburger_91cc"
+                android:layout_marginTop="24dp"
+                android:visibility="gone"/>
 
 
         </RelativeLayout>
