--- a/app/src/main/res/layout/dialog_cancel_order.xml
+++ b/app/src/main/res/layout/dialog_cancel_order.xml
@@ -95,7 +95,7 @@
             android:layout_marginHorizontal="18dp"
             android:fontFamily="@font/sfprotext_bold"
             android:textSize="16sp"
-            android:textColor="@color/redPrimary"/>
+            android:textColor="@color/lightgrey"/>
 
         <Button
             android:id="@+id/positiveButton"
