--- a/app/src/main/res/layout/dialog_confirm_forgot_pass.xml
+++ b/app/src/main/res/layout/dialog_confirm_forgot_pass.xml
@@ -19,6 +19,7 @@
         android:layout_gravity="center"
         android:layout_marginBottom="30dp"
         android:textColor="@android:color/black"
+        android:fontFamily="@font/sfprotext_medium"
         android:textSize="20dp"/>
 
     <LinearLayout
