--- a/app/src/main/res/layout/dialog_red.xml
+++ b/app/src/main/res/layout/dialog_red.xml
@@ -54,7 +54,7 @@
             android:layout_marginHorizontal="8dp"
             android:fontFamily="@font/sfprotext_bold"
             android:textSize="16sp"
-            android:textColor="@color/redPrimary"/>
+            android:textColor="@color/lightgrey"/>
 
         <Button
             android:id="@+id/positiveButton"
