--- a/app/src/main/res/layout/dialog_red.xml
+++ b/app/src/main/res/layout/dialog_red.xml
@@ -4,7 +4,9 @@
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:padding="32dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +42,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:weightSum="2"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <Button
             android:id="@+id/negativeButton"
