--- a/app/src/main/res/layout/edit_profile_pop_up.xml
+++ b/app/src/main/res/layout/edit_profile_pop_up.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="480dp"
-    android:layout_height="340dp">
+    android:layout_height="340dp"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
     <Button
         android:id="@+id/closeButton"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginRight="12dp"
         android:background="@drawable/ic_close"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"/>
