--- a/app/src/main/res/layout/change_password_popup.xml
+++ b/app/src/main/res/layout/change_password_popup.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="295dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:clipChildren="false"
+    android:clipToPadding="false">
 
     <TextView
         android:id="@+id/textView20"
@@ -26,7 +28,7 @@
         android:layout_width="95dp"
         android:layout_height="34dp"
         android:layout_marginStart="55dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginTop="32dp"
 
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_background"
@@ -43,7 +45,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="38dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="40dp"
         android:text="CANCEL"
         android:textColor="#BDBDBD"
         android:textSize="14sp"
