--- a/app/src/main/res/layout/dialog_cancel_order.xml
+++ b/app/src/main/res/layout/dialog_cancel_order.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     >
 
     <TextView
