--- a/app/src/main/res/layout/dialog_confirm_forgot_pass.xml
+++ b/app/src/main/res/layout/dialog_confirm_forgot_pass.xml
@@ -7,6 +7,8 @@
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true"
+    android:clipChildren="false"
+    android:clipToPadding="false"
     >
 
 
@@ -26,7 +28,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <Button
             android:id="@+id/confirm_cancel_recover"
