--- a/app/src/main/res/layout/dialog_unlock_pin.xml
+++ b/app/src/main/res/layout/dialog_unlock_pin.xml
@@ -77,7 +77,9 @@ to reveal the Sales Record Page"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:weightSum="2"
-        android:layout_gravity="center">
+        android:layout_gravity="center"
+        android:clipChildren="false"
+        android:clipToPadding="false">
 
         <Button
             android:id="@+id/negativeButton"
