--- a/app/src/main/res/layout/activity_signup_password_page.xml
+++ b/app/src/main/res/layout/activity_signup_password_page.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SignupPasswordPage"
-    android:onClick="hideKb">
+    android:onClick="hideKb"
+    android:clipChildren="false"
+    android:clipToPadding="false">
     <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -65,7 +67,8 @@
             android:textColor="#333333"
             android:hint="Enter your password"
             android:maxLength="40"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:imeOptions="actionNext" />
 
         <TextView
             android:id="@+id/passwordError"
@@ -104,7 +107,8 @@
             android:textColor="#333333"
             android:hint="Confirm your password"
             android:maxLength="40"
-            android:singleLine="true"/>
+            android:singleLine="true"
+            android:imeOptions="actionDone"/>
 
         <TextView
             android:id="@+id/confirmPasswordError"
